--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "vscode-uni-var-support",
   "description": "scss颜色变量提示",
   "publisher": "ynqq",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "engines": {
     "vscode": "^1.89.0"
   },
@@ -23,7 +23,7 @@
       "properties": {
         "var-css-support": {
           "type": "object",
-          "description": "配置",
+          "description": "配置文件入口和文件类型配置",
           "default": {
             "entry": [],
             "fileType": [
@@ -32,6 +32,88 @@
               "vue"
             ]
           }
+        },
+        "var-css-colors": {
+          "type": "array",
+          "description": "颜色-需要提示的css属性",
+          "default": [
+            "background",
+            "color",
+            "background-color",
+            "border-color",
+            "outline-color",
+            "text-decoration-color",
+            "caret-color",
+            "column-rule-color",
+            "fill",
+            "stroke",
+            "box-shadow",
+            "text-shadow",
+            "accent-color",
+            "stop-color",
+            "flood-color",
+            "lighting-color"
+          ]
+        },
+        "var-css-size": {
+          "type": "array",
+          "description": "尺寸-需要提示的css属性",
+          "default": [
+            "width",
+            "min-width",
+            "max-width",
+            "height",
+            "min-height",
+            "max-height",
+            "font-size",
+            "line-height",
+            "border-width",
+            "border-radius",
+            "padding",
+            "padding-top",
+            "padding-right",
+            "padding-bottom",
+            "padding-left",
+            "margin",
+            "margin-top",
+            "margin-right",
+            "margin-bottom",
+            "margin-left",
+            "top",
+            "right",
+            "bottom",
+            "left",
+            "outline-width",
+            "column-width",
+            "letter-spacing",
+            "word-spacing",
+            "text-indent",
+            "gap",
+            "row-gap",
+            "column-gap",
+            "box-shadow",
+            "text-shadow",
+            "clip-path",
+            "grid-auto-rows",
+            "grid-auto-columns",
+            "grid-template-rows",
+            "grid-template-columns",
+            "border-spacing",
+            "scroll-margin",
+            "scroll-margin-top",
+            "scroll-margin-right",
+            "scroll-margin-bottom",
+            "scroll-margin-left",
+            "scroll-padding",
+            "scroll-padding-top",
+            "scroll-padding-right",
+            "scroll-padding-bottom",
+            "scroll-padding-left",
+            "mask-position",
+            "mask-size",
+            "background-position",
+            "background-size"
+          ]
         }
       }
     },
