--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "vscode-uni-var-support",
   "description": "scss颜色变量提示",
   "publisher": "ynqq",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "engines": {
     "vscode": "^1.89.0"
   },
@@ -26,6 +26,8 @@
           "description": "配置文件入口和文件类型配置",
           "default": {
             "entry": [],
+            "enableNativeVar": true,
+            "colorValShow": true,
             "fileType": [
               "scss",
               "css",
@@ -143,17 +145,21 @@
     "publish": "vsce package && vsce publish"
   },
   "devDependencies": {
-    "@types/vscode": "^1.89.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/tinycolor2": "^1.4.6",
+    "@types/vscode": "^1.89.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.3.3",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.8",
-    "@vscode/test-electron": "^2.3.9"
+    "@vscode/test-electron": "^2.3.9",
+    "eslint": "^8.57.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "tinycolor2": "^1.6.0"
   }
 }
